Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-71457

Regression 5.11->5.12 Selection buffer paste no longer works

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.12.0 Beta 4
    • 5.12.0 Beta 2
    • WebEngine
    • None
    • Linux/X11
    • 24e56256fed17af82e094884adb38fddf7945b08 (qt/qtwebengine-chromium/69-based) 2d6f5dcfdbdf079b5a10e89934c0dd8a03c37974 (qt/qtwebengine-chromium/71-based) fa10c5485664ae1a9b2382bd2b0f6cd6a348ed42 (qt/qtwebengine-chromium/73-based)

      Pasting with middle mouse button now doesn't work. Probably a side effect from switching to ozone.

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            allan.jensen Allan Sandfeld Jensen
            allan.jensen Allan Sandfeld Jensen
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes