Fix selection paste on Linux

Change-Id: Ib269a80077834c1aff73be75e16e2338c52e23a9
Fixes: QTBUG-71457
Reviewed-by: Peter Varga <pvarga@inf.u-szeged.hu>